--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,31 @@
 * {
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
     color: red;
 }
 
+header {
+    height: auto;
+}
+
 header img {
-    display: flex;
+    position: relative;
     width: 100%;
+    height: auto;
     margin: 0 auto;
     filter: grayscale(100%) opacity(40%);
 }
 
 .photo_bg_container > .text_item {
+    position: relative;
     display: flex;
+    align-items: center;
     justify-content: center;
+    top: 50%;
+    
 }
 
 main {
