--- a/styles.css
+++ b/styles.css
@@ -1,39 +1,68 @@
 * {
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Paytone One, sans-serif;
 }
 
 header {
-    height: 100px;
-}
-
-.top {
     position: relative;
-    text-align: center;
-    
+    height: 100vh;
+    min-height: auto;
+    background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0)), url(SayNode2.jpg);
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0)), url(SayNode2.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    filter: grayscale(100%);
+    opacity: 0.8;
 }
 
-.bg_photo {
-    width: 100%;
-    /* height: 100%;
-    margin: 0 auto; */
-    filter: grayscale(100%) opacity(40%);
-}
-
-h1 {
+.header-text {
     position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
 }
 
-/* main {
+.header-text > h1, .header-text > h2 {
+    text-align: left;
+    position: relative;
+    /* left: 10%; */
+    /* top: 40%; */
+    /* transform: translate(-50%, -50%); */
+    font-size: 4vw;
+}
+
+.navbar-sticky {
+    position: sticky;
     display: flex;
+    flex-direction: row;
+    justify-content: center;
+    top: 0;
     width: auto;
-    height: 10em;
-    margin: 0px;
+    padding: 10px;
+    background-color: red;
+}
+
+.navbar-sticky > p {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: auto;
+    margin: 10px;
+    padding: 20px;
+}
+
+.top-container {
+    display: flex;
+    flex-direction: row;
+    width: auto;
     background-color: yellow;
-} */
+}
+
+.top-container > p {
+    margin: 10px;
+    padding: 20px;
+    border: 5px;
+    border-color: black;
+}
 
 footer {
     background-color: black;
