--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
 * {
     text-align: center;
     font-family: Paytone One, sans-serif;
+    scroll-behavior: smooth;
 }
 
 header {
     position: relative;
-    height: 100vh;
+    height: 80vh;
     min-height: auto;
     background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0)), url(SayNode2.jpg);
     background-image: linear-gradient(to top, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0)), url(SayNode2.jpg);
@@ -62,6 +63,13 @@ header {
     padding: 20px;
     border: 5px;
     border-color: black;
+}
+
+.middle-container {
+    display: flex;
+    flex-direction: row;
+    width: auto;
+    background-color: lightgreen;
 }
 
 footer {
