--- a/styles.css
+++ b/styles.css
@@ -6,45 +6,33 @@
   font-size: 1rem;
 }
 
+li, ul {
+  list-style: none;
+}
+
 body {
   margin: 0;
   font-size: 2rem;
 }
 
-header {
-  /* position: relative; */
-  /* width: auto; */
-  /* background: url(SayNode2.jpg); */
-  /* min-height: auto; */
-  /* background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0)), url(SayNode2.jpg); */
-  /* background-image: linear-gradient(to top, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0)), url(SayNode2.jpg); */
-  background-size: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  max-width: 100vw;
-  height: 100vh;
-}
+/* everything in header */
 
 .bild {
   width: 100vw;
+  max-width: 100%;
   filter: grayscale(100%);
   opacity: 0.8;
 }
 
-/* .header-text {
-  position: absolute;
-} */
-
 .header-container {
   position: relative;
-  width: 100vw;
+  width: auto;
   height: auto;
 }
 
 .box {
   position: relative;
-  height: auto;
+  /* height: auto; */
 }
 
 .header-text {
@@ -64,6 +52,8 @@ header {
   top: 40%;
   transform: translate(-50%, -50%); */
 }
+
+/* everything in navigation bar */
 
 .navbar-sticky {
   position: sticky;
@@ -85,14 +75,32 @@ header {
   padding: 1em;
 }
 
-main > * > * {
-  padding: 30px;
-}
+/* everything in main */
 
 main > * {
+  padding: 30px;
   display: flex;
   flex-direction: row;
   width: auto;
+}
+
+/* main > * {
+  display: flex;
+  flex-direction: row;
+  width: auto;
+} */
+
+.about {
+  flex-direction: row;
+}
+
+#avatar {
+  border-radius: 50%;
+  width: 150px;
+  border-style: solid;
+  border-color: black;
+  box-shadow: 0 0 50px black;
+  margin: 20px;
 }
 
 #top {
@@ -115,7 +123,7 @@ footer {
   color: white;
 }
 
-/* condition, when width smaller (i.g. mobile horizontal) */
+/* conditions, when page width smaller (i.g. mobile horizontal) */
 @media screen and (max-width: 600px) {
   * {
     scroll-padding-top: 150px;
@@ -132,5 +140,8 @@ footer {
   main > * {
     display: flex;
     flex-direction: column;
+  }
+  #avatar {
+    width: 120px;
   }
 }
