--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,7 @@ main > * {
 
 .language-bar {
   position: relative;
-  border: 2px solid #0d96e0;
+  border: 2px solid black;
   border-radius: 20px;
 }
 
@@ -129,7 +129,7 @@ main > * {
   transition: max-width 2s ease;
   height: 9px;
   border-radius: 10px;
-  background-color: #0d96e0;
+  background-color: black;
 }
 
 .language-skills:not(:last-child) {
