--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* general stuff */
 * {
   text-align: center;
   font-family: Paytone One, sans-serif;
@@ -16,7 +17,6 @@ body {
 }
 
 /* everything in header */
-
 .bild {
   width: 100vw;
   max-width: 100%;
@@ -54,7 +54,6 @@ body {
 }
 
 /* everything in navigation bar */
-
 .navbar-sticky {
   position: sticky;
   display: flex;
@@ -77,22 +76,11 @@ body {
 }
 
 /* everything in main */
-
 main > * {
   padding: 30px;
   display: flex;
-  width: auto;
-}
-
-/* main > * {
-  display: flex;
-  flex-direction: row;
-  width: auto;
-} */
-
-.about {
-  display: flex;
   flex-direction: column;
+  width: auto;
 }
 
 #avatar {
@@ -140,7 +128,10 @@ main > * {
 .language-bar div.animate {
   max-width: 100%;
 }
+/* language-bars section ends*/
 
+/* Dad Joke formatting
+source: https://wesbos.com/javascript/13-ajax-and-fetching-data/76-dad-jokes */
 .dadjoke-api {
   background-color: orange;
   justify-content: center;
@@ -159,21 +150,37 @@ main > * {
 }
 
 .middle-container {
-  width: inherit;
-}
-
-/* .language-bar {
-  display: none;
-}
-
-.language-bar-display {
-  display: initial;
-} */
-
-/* language-bars section ends*/
-
-#middle {
   background-color: lightgreen;
+}
+
+
+
+#social {
+  /* border-radius: 50%; */
+  width: 50vw;
+  border-style: solid;
+  border-color: black;
+  box-shadow: 0 0 50px black;
+  margin: 20px;
+}
+
+.twt {
+  width: 50px;
+  text-align: center;
+  padding: 0px 50px 0px 50px;
+}
+
+@media screen and (min-width: 600px) {
+  /* .middle-container {
+    flex-direction: column;
+    padding-left: 150px;
+    padding-right: 150px;
+  } */
+  .twt {
+    width: 50px;
+    text-align: center;
+    padding: 0px 50px 0px 50px;
+  }
 }
 
 /* .top-container > p {
@@ -182,6 +189,56 @@ main > * {
   border: 5px;
   border-color: black;
 } */
+
+/* .blockquote {
+  max-width: 600px;
+  margin: 10px 30px;
+  padding: 25px;
+  background: #f8fffe;
+  border: 1px solid #b0d2cb;
+  color: #0b4237;
+  box-sizing: border-box;
+}
+.blockquote--bordered {
+  border-left-width: 10px;
+}
+.blockquote--quoted::before {
+  content: "\201c";
+  font-size: 100px;
+  color: #009578;
+  display: block;
+}
+.blockquote__text {
+  font-family: 'Gelasio', serif;
+  font-style: italic;
+  font-size: 1.15em;
+  line-height: 1.5;
+  margin: 0;
+}
+.blockquote__text--credit {
+  font-weight: bold;
+  font-style: normal;
+  text-align: right;
+} */
+
+blockquote {
+  background: #f9f9f9;
+  border-left: 10px solid #ccc;
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+  quotes: "\201C""\201D""\2018""\2019";
+}
+blockquote:before {
+  color: #ccc;
+  content: open-quote;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-right: 0.25em;
+  vertical-align: -0.4em;
+}
+blockquote p {
+  display: inline;
+}
 
 footer {
   background-color: black;
