--- a/styles.css
+++ b/styles.css
@@ -158,6 +158,7 @@ source: https://wesbos.com/javascript/13-ajax-and-fetching-data/76-dad-jokes */
   background-color: #F0E1AA;
 }
 
+/* social media links */
 #social {
   width: 50vw;
   margin: 20px;
@@ -187,6 +188,7 @@ source: https://wesbos.com/javascript/13-ajax-and-fetching-data/76-dad-jokes */
   filter: grayscale(0%);
 }
 
+/* footer only */
 footer > * {
   background-color: #85642F;
   color: white;
